refactor: update card headers

--- a/pug/base/accordion.pug
+++ b/pug/base/accordion.pug
@@ -42,7 +42,7 @@ block view
       .card.mb-4
         .card-header
           |  Accordion
-          small Flush
+          span.small.ms-1 Flush
         .card-body
           #accordionFlushExample.accordion.accordion-flush
             .accordion-item
