--- a/pug/base/breadcrumb.pug
+++ b/pug/base/breadcrumb.pug
@@ -6,9 +6,9 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Breadcrumb
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-breadcrumb/', target='_blank')
-              small.text-muted docs
+          .float-end
+            a(href='http://coreui.io/docs/components/breadcrumb/', target='_blank')
+              | docs
         .card-body
           nav(aria-label='breadcrumb', role='navigation')
             ol.breadcrumb
