--- a/pug/base/cards.pug
+++ b/pug/base/cards.pug
@@ -96,42 +96,42 @@ block view
   // /.row
   .row
     .col-sm-6.col-md-4
-      .card.mb-4.card-accent-primary
+      .card.mb-4.border-top-primary.border-top-2
         .card-header
           | Card with accent
         .card-body
           | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
     // /.col
     .col-sm-6.col-md-4
-      .card.mb-4.card-accent-secondary
+      .card.mb-4.border-top-secondary.border-top-2
         .card-header
           | Card with accent
         .card-body
           | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
     // /.col
     .col-sm-6.col-md-4
-      .card.mb-4.card-accent-success
+      .card.mb-4.border-top-success.border-top-2
         .card-header
           | Card with accent
         .card-body
           | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
     // /.col
     .col-sm-6.col-md-4
-      .card.mb-4.card-accent-info
+      .card.mb-4.border-top-info.border-top-2
         .card-header
           | Card with accent
         .card-body
           | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
     // /.col
     .col-sm-6.col-md-4
-      .card.mb-4.card-accent-warning
+      .card.mb-4.border-top-warning.border-top-2
         .card-header
           | Card with accent
         .card-body
           | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
     // /.col
     .col-sm-6.col-md-4
-      .card.mb-4.card-accent-danger
+      .card.mb-4.border-top-danger.border-top-2
         .card-header
           | Card with accent
         .card-body
@@ -236,22 +236,22 @@ block view
         .card-body
           | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
     // /.col
-    .col-sm-6.col-md-4
-      .card.mb-4
-        .card-header
-          | Card actions
-          .card-header-actions
-            a.card-header-action.btn-setting(href='#')
-              svg.icon
-                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
-            a.card-header-action.btn-minimize(href='#', data-coreui-toggle='collapse', data-coreui-target='#collapseExample', aria-expanded='true')
-              svg.icon
-                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-arrow-circle-top")
-            a.card-header-action.btn-close(href='#')
-              svg.icon
-                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-x-circle")
-        #collapseExample.collapse.show
-          .card-body
-          | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-    // /.col
+    //- .col-sm-6.col-md-4
+    //-   .card.mb-4
+    //-     .card-header
+    //-       | Card actions
+    //-       .float-end
+    //-         a.card-header-action.btn-setting(href='#')
+    //-           svg.icon
+    //-             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings")
+    //-         a.card-header-action.btn-minimize(href='#', data-coreui-toggle='collapse', data-coreui-target='#collapseExample', aria-expanded='true')
+    //-           svg.icon
+    //-             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-arrow-circle-top")
+    //-         a.card-header-action.btn-close(href='#')
+    //-           svg.icon
+    //-             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-x-circle")
+    //-     #collapseExample.collapse.show
+    //-       .card-body
+    //-       | Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+    //- // /.col
   // /.row
