--- a/pug/base/carousel.pug
+++ b/pug/base/carousel.pug
@@ -6,10 +6,10 @@ block view
       .card.mb-4
         .card-header
           |  Carousel
-          small slides only
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-carousel/', target='_blank')
-              small.text-muted docs
+          span.small.ms-1 slides only
+          .float-end
+            a(href='http://coreui.io/docs/components/carousel/', target='_blank')
+              | docs
         .card-body
           #carouselExampleSlidesOnly.carousel.slide(data-coreui-ride='carousel')
             .carousel-inner
@@ -22,7 +22,7 @@ block view
       .card.mb-4
         .card-header
           |  Carousel
-          small with controls
+          span.small.ms-1 with controls
         .card-body
           #carouselExampleControls.carousel.slide(data-coreui-ride='carousel')
             .carousel-inner
@@ -42,7 +42,7 @@ block view
       .card.mb-4
         .card-header
           |  Carousel
-          small with indicators
+          span.small.ms-1 with indicators
         .card-body
           #carouselExampleIndicators.carousel.slide(data-coreui-ride='carousel')
             ol.carousel-indicators
@@ -65,7 +65,7 @@ block view
       .card.mb-4
         .card-header
           |  Carousel
-          small with captions
+          span.small.ms-1 with captions
         .card-body
           #carouselExampleCaptions.carousel.slide(data-coreui-ride='carousel')
             ol.carousel-indicators
