--- a/pug/base/collapse.pug
+++ b/pug/base/collapse.pug
@@ -4,9 +4,9 @@ block view
   .card.mb-4
     .card-header
       |  Collapse
-      .card-header-actions
-        a.card-header-action(href='http://coreui.io/docs/components/bootstrap-collapse/', target='_blank')
-          small.text-muted docs
+      .float-end
+        a(href='http://coreui.io/docs/components/collapse/', target='_blank')
+          | docs
     .card-body
       p
         a.btn.btn-primary(data-coreui-toggle='collapse', href='#collapseExample', aria-expanded='false', aria-controls='collapseExample')
@@ -19,7 +19,7 @@ block view
   .card.mb-4
     .card-header
       |  Collapse
-      small multiple targets
+      span.small.ms-1 multiple targets
     .card-body
       p
         a.btn.btn-primary(data-coreui-toggle='collapse', href='#multiCollapseExample1', aria-expanded='false', aria-controls='multiCollapseExample1') Toggle first element
