--- a/pug/base/forms.pug
+++ b/pug/base/forms.pug
@@ -5,7 +5,7 @@ block view
     .col-sm-6
       .card.mb-4
         .card-header
-          | #[strong Credit Card] #[small Form]
+          | #[strong Credit Card] #[span.small.ms-1 Form]
         .card-body
           .row
             .col-sm-12
@@ -59,7 +59,7 @@ block view
     .col-sm-6
       .card.mb-4
         .card-header
-          | #[strong Company] #[small Form]
+          | #[strong Company] #[span.small.ms-1 Form]
         .card-body
           .mb-3
             label.form-label(for='company') Company
@@ -514,7 +514,7 @@ block view
     .col-md-6
       .card.mb-4
         .card-header
-          | Use the grid for big devices! #[small #[code .col-lg-*] #[code  .col-md-*] #[code  .col-sm-*]]
+          | Use the grid for big devices! #[span.small.ms-1 #[code .col-lg-*] #[code  .col-md-*] #[code  .col-sm-*]]
         .card-body
           form.form-horizontal(action='', method='post')
             .row.mb-3
@@ -551,7 +551,7 @@ block view
     .col-md-6
       .card.mb-4
         .card-header
-          | Input Grid for small devices! #[small #[code .col-*]]
+          | Input Grid for small devices! #[span.small.ms-1 #[code .col-*]]
         .card-body
           form.form-horizontal(action='', method='post')
             .row.mb-3
