--- a/pug/base/list-group.pug
+++ b/pug/base/list-group.pug
@@ -6,9 +6,9 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-list-group/', target='_blank')
-              small.text-muted docs
+          .float-end
+            a(href='http://coreui.io/docs/components/list-group/', target='_blank')
+              | docs
         .card-body
           ul.list-group
             li.list-group-item Cras justo odio
@@ -20,7 +20,7 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          small active items
+          span.small.ms-1 active items
         .card-body
           ul.list-group
             li.list-group-item.active Cras justo odio
@@ -33,7 +33,7 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          small links with disabled items
+          span.small.ms-1 links with disabled items
         .card-body
           .list-group
             a.list-group-item.active(href='#')
@@ -46,7 +46,7 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          small buttons with disabled items
+          span.small.ms-1 buttons with disabled items
         .card-body
           .list-group
             button.list-group-item.list-group-item-action.active(type='button')
@@ -60,7 +60,7 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          small contextual classes
+          span.small.ms-1 contextual classes
         .card-body
           ul.list-group
             li.list-group-item Dapibus ac facilisis in
@@ -111,7 +111,7 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          small with badges
+          span.small.ms-1 with badges
         .card-body
           ul.list-group
             li.list-group-item.d-flex.list-group-item-action.justify-content-between.align-items-center
@@ -127,7 +127,7 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          small custom content
+          span.small.ms-1 custom content
         .card-body
           .list-group
             a.list-group-item.list-group-item-action.flex-column.align-items-start.active(href='#')
@@ -156,7 +156,7 @@ block view
       .card.mb-4
         .card-header
           |  List group
-          small tab Javascript plugin
+          span.small.ms-1 tab Javascript plugin
         .card-body
           .row
             .col-4
