--- a/pug/base/navs.pug
+++ b/pug/base/navs.pug
@@ -6,9 +6,9 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-navs/', target='_blank')
-              small.text-muted docs
+          .float-end
+            a(href='http://coreui.io/docs/components/navs/', target='_blank')
+              | docs
         .card-body
           ul.nav
             li.nav-item
@@ -49,7 +49,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small vertical
+          span.small.ms-1 vertical
         .card-body
           nav.nav.flex-column
             a.nav-link.active(href='#') Active
@@ -60,7 +60,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small vertical
+          span.small.ms-1 vertical
         .card-body
           ul.nav.flex-column
             li.nav-item
@@ -76,7 +76,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small tabs
+          span.small.ms-1 tabs
         .card-body
           ul.nav.nav-tabs
             li.nav-item
@@ -91,7 +91,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small pills
+          span.small.ms-1 pills
         .card-body
           ul.nav.nav-pills
             li.nav-item
@@ -107,7 +107,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small fill and justify
+          span.small.ms-1 fill and justify
         .card-body
           ul.nav.nav-pills.nav-fill
             li.nav-item
@@ -141,7 +141,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small with flex
+          span.small.ms-1 with flex
         .card-body
           nav.nav.nav-pills.flex-column.flex-sm-row
             a.flex-sm-fill.text-sm-center.nav-link.active(href='#') Active
@@ -153,7 +153,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small tabs with dropdowns
+          span.small.ms-1 tabs with dropdowns
         .card-body
           ul.nav.nav-tabs
             li.nav-item
@@ -174,7 +174,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small pills with dropdowns
+          span.small.ms-1 pills with dropdowns
         .card-body
           ul.nav.nav-pills
             li.nav-item
@@ -196,7 +196,7 @@ block view
       .card.mb-4
         .card-header
           |  Navs
-          small with tab JavaScript plugin
+          span.small.ms-1 with tab JavaScript plugin
         .card-body
           ul#myTab1.nav.nav-tabs(role='tablist')
             li.nav-item
