--- a/pug/base/pagination.pug
+++ b/pug/base/pagination.pug
@@ -4,9 +4,9 @@ block view
   .card.mb-4
     .card-header
       |  Pagination
-      .card-header-actions
-        a.card-header-action(href='http://coreui.io/docs/components/bootstrap-pagination/', target='_blank')
-          small.text-muted docs
+      .float-end
+        a(href='http://coreui.io/docs/components/pagination/', target='_blank')
+          | docs
     .card-body
       nav(aria-label='Page navigation example')
         ul.pagination
@@ -23,7 +23,7 @@ block view
   .card.mb-4
     .card-header
       |  Pagination
-      small with icons
+      span.small.ms-1 with icons
     .card-body
       nav(aria-label='Page navigation example')
         ul.pagination
@@ -44,7 +44,7 @@ block view
   .card.mb-4
     .card-header
       |  Pagination
-      small disabled and active
+      span.small.ms-1 disabled and active
     .card-body
       nav(aria-label='...')
         ul.pagination
@@ -78,7 +78,7 @@ block view
   .card.mb-4
     .card-header
       |  Pagination
-      small sizing
+      span.small.ms-1 sizing
     .card-body
       nav(aria-label='...')
         ul.pagination.pagination-lg
@@ -108,7 +108,7 @@ block view
   .card.mb-4
     .card-header
       |  Pagination
-      small alignment
+      span.small.ms-1 alignment
     .card-body
       nav(aria-label='Page navigation example')
         ul.pagination.justify-content-start
