--- a/pug/base/scrollspy.pug
+++ b/pug/base/scrollspy.pug
@@ -4,9 +4,9 @@ block view
   .card.mb-4
     .card-header
       | Scrollspy
-      .card-header-actions
-        a.card-header-action(href='http://coreui.io/docs/components/bootstrap-scrollspy/', target='_blank')
-          small.text-muted docs
+      .float-end
+        a(href='http://coreui.io/docs/components/scrollspy/', target='_blank')
+          | docs
     .card-body
       .scrollspy-example1
         nav#navbar-example1.navbar.navbar-light.bg-light(style='padding: .5rem 1rem;')
@@ -44,7 +44,7 @@ block view
   .card.mb-4
     .card-header
       | Scrollspy
-      small with list-group
+      span.small.ms-1 with list-group
     .card-body
       .row.bd-example2
         .col-4
