--- a/pug/buttons/button-group.pug
+++ b/pug/buttons/button-group.pug
@@ -6,9 +6,9 @@ block view
       .card.mb-4
         .card-header
           .fw-semibold Button group
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-button-group/', target='_blank')
-              small.text-muted docs
+          .float-end
+            a(href='http://coreui.io/docs/components/button-group/', target='_blank')
+              | docs
         .card-body
           .btn-group(role='group', aria-label='Basic example')
             button.btn.btn-secondary(type='button') Left
@@ -17,7 +17,7 @@ block view
       .card.mb-4
         .card-header
           | Button group
-          small toolbar
+          span.small.ms-1 toolbar
         .card-body
           .btn-toolbar.mb-3(role='toolbar', aria-label='Toolbar with button groups')
             .btn-group.me-2(role='group', aria-label='First group')
@@ -55,7 +55,7 @@ block view
       .card.mb-4
         .card-header
           | Button group
-          small sizing
+          span.small.ms-1 sizing
         .card-body
           .btn-group.btn-group-lg.mb-3(role='group', aria-label='Large button group')
             button.btn.btn-secondary(type='button') Left
@@ -74,7 +74,7 @@ block view
       .card.mb-4
         .card-header
           | Button group
-          small nesting
+          span.small.ms-1 nesting
         .card-body
           .btn-group(role='group', aria-label='Button group with nested dropdown')
             button.btn.btn-secondary(type='button') 1
@@ -90,7 +90,7 @@ block view
       .card.mb-4
         .card-header
           | Button group
-          small vertical variation
+          span.small.ms-1 vertical variation
         .card-body
           .btn-group-vertical(role='group', aria-label='Vertical button group')
             button.btn.btn-secondary(type='button') Button
@@ -103,7 +103,7 @@ block view
       .card.mb-4
         .card-header
           | Button group
-          small vertical variation
+          span.small.ms-1 vertical variation
         .card-body
           .btn-group-vertical(role='group', aria-label='Vertical button group')
             button.btn.btn-secondary(type='button') Button
