--- a/pug/buttons/dropdowns.pug
+++ b/pug/buttons/dropdowns.pug
@@ -6,9 +6,9 @@ block view
       .card.mb-4
         .card-header
           |  Dropdowns
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-dropdowns/', target='_blank')
-              small.text-muted docs
+          .float-end
+            a(href='http://coreui.io/docs/components/dropdowns/', target='_blank')
+              | docs
         .card-body
           .row
             .col
