--- a/pug/notifications/badge.pug
+++ b/pug/notifications/badge.pug
@@ -6,9 +6,9 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Badges
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-badge/', target='_blank')
-              small.text-muted docs
+          .float-end
+            a(href='http://coreui.io/docs/components/badge/', target='_blank')
+              | docs
         .card-body
           h1
             | Example heading
@@ -36,7 +36,7 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Badges
-          small contextual variations
+          span.small.ms-1 contextual variations
         .card-body
           span.badge.bg-primary Primary
           span.badge.bg-secondary Secondary
@@ -49,7 +49,7 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Badges
-          small pill badges
+          span.small.ms-1 pill badges
         .card-body
           span.badge.bg-pill.bg-primary Primary
           span.badge.bg-pill.bg-secondary Secondary
@@ -62,7 +62,7 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Badges
-          small links
+          span.small.ms-1 links
         .card-body
           a.badge.bg-primary(href='#') Primary
           a.badge.bg-secondary(href='#') Secondary
