--- a/pug/base/progress.pug
+++ b/pug/base/progress.pug
@@ -4,9 +4,9 @@ block view
   .card.mb-4
     .card-header
       | Progress
-      .card-header-actions
-        a.card-header-action(href='http://coreui.io/docs/components/bootstrap-popover/popovers.html', target='_blank')
-          small.text-muted docs
+      .float-end
+        a(href='http://coreui.io/docs/components/popover/popovers.html', target='_blank')
+          | docs
     .card-body
       .progress.mb-3
         .progress-bar(role='progressbar', aria-valuenow='0', aria-valuemin='0', aria-valuemax='100')
@@ -21,7 +21,7 @@ block view
   .card.mb-4
     .card-header
       | Progress
-      small labels
+      span.small.ms-1 labels
     .card-body
       .progress.mb-3
         .progress-bar(role='progressbar', style='width: 25%;', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
@@ -32,7 +32,7 @@ block view
   .card.mb-4
     .card-header
       | Progress
-      small height
+      span.small.ms-1 height
     .card-body
       .progress.mb-3(style='height: 3px;')
         .progress-bar(role='progressbar', style='width: 25%;', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
@@ -41,7 +41,7 @@ block view
   .card.mb-4
     .card-header
       | Progress
-      small backgrounds
+      span.small.ms-1 backgrounds
     .card-body
       .progress.mb-3
         .progress-bar.bg-success(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
@@ -54,7 +54,7 @@ block view
   .card.mb-4
     .card-header
       | Progress
-      small multiple bars
+      span.small.ms-1 multiple bars
     .card-body
       .progress
         .progress-bar(role='progressbar', style='width: 15%', aria-valuenow='15', aria-valuemin='0', aria-valuemax='100')
@@ -63,7 +63,7 @@ block view
   .card.mb-4
     .card-header
       | Progress
-      small striped
+      span.small.ms-1 striped
     .card-body
       .progress.mb-3
         .progress-bar.progress-bar-striped(role='progressbar', style='width: 10%', aria-valuenow='10', aria-valuemin='0', aria-valuemax='100')
@@ -78,7 +78,7 @@ block view
   .card.mb-4
     .card-header
       | Progress
-      small animated
+      span.small.ms-1 animated
     .card-body
       .progress
         .progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar', aria-valuenow='75', aria-valuemin='0', aria-valuemax='100', style='width: 75%')
