--- a/pug/base/tooltips.pug
+++ b/pug/base/tooltips.pug
@@ -8,9 +8,9 @@ block view
   .card.mb-4
     .card-header
       | Tooltips
-      .card-header-actions
-        a.card-header-action(href='http://coreui.io/docs/components/bootstrap-tooltips/', target='_blank')
-          small.text-muted docs
+      .float-end
+        a(href='http://coreui.io/docs/components/tooltips/', target='_blank')
+          | docs
     .card-body
       p.text-muted Hover over the links below to see tooltips:
       .bd-example.tooltip-demo
