--- a/pug/charts.pug
+++ b/pug/charts.pug
@@ -12,54 +12,54 @@ block view
     .card.mb-4
       .card-header
         | Line Chart
-        .card-header-actions
-          a.card-header-action(href='http://www.chartjs.org', target='_blank')
-            small.text-muted docs
+        .float-end
+          a(href='http://www.chartjs.org', target='_blank')
+            | docs
       .card-body
         .c-chart-wrapper
           canvas#canvas-1
     .card.mb-4
       .card-header
         | Bar Chart
-        .card-header-actions
-          a.card-header-action(href='http://www.chartjs.org', target='_blank')
-            small.text-muted docs
+        .float-end
+          a(href='http://www.chartjs.org', target='_blank')
+            | docs
       .card-body
         .c-chart-wrapper
           canvas#canvas-2
     .card.mb-4
       .card-header
         | Doughnut Chart
-        .card-header-actions
-          a.card-header-action(href='http://www.chartjs.org', target='_blank')
-            small.text-muted docs
+        .float-end
+          a(href='http://www.chartjs.org', target='_blank')
+            | docs
       .card-body
         .c-chart-wrapper
           canvas#canvas-3
     .card.mb-4
       .card-header
         | Radar Chart
-        .card-header-actions
-          a.card-header-action(href='http://www.chartjs.org', target='_blank')
-            small.text-muted docs
+        .float-end
+          a(href='http://www.chartjs.org', target='_blank')
+            | docs
       .card-body
         .c-chart-wrapper
           canvas#canvas-4
     .card.mb-4
       .card-header
         | Pie Chart
-        .card-header-actions
-          a.card-header-action(href='http://www.chartjs.org', target='_blank')
-            small.text-muted docs
+        .float-end
+          a(href='http://www.chartjs.org', target='_blank')
+            | docs
       .card-body
         .c-chart-wrapper
           canvas#canvas-5
     .card.mb-4
       .card-header
         | Polar Area Chart
-        .card-header-actions
-          a.card-header-action(href='http://www.chartjs.org', target='_blank')
-            small.text-muted docs
+        .float-end
+          a(href='http://www.chartjs.org', target='_blank')
+            | docs
       .card-body
         .c-chart-wrapper
           canvas#canvas-6
