--- a/pug/icons/coreui-icons-flag.pug
+++ b/pug/icons/coreui-icons-flag.pug
@@ -9,8 +9,8 @@ block view
   .card.mb-4
     .card-header
       |  CoreUI Icons - Flag
-      .card-header-actions
-        a.card-header-action(href='https://coreui.io/icons/', target='_blank') Download free flag icons
+      .float-end
+        a(href='https://coreui.io/icons/', target='_blank') Download free flag icons
     .card-body
       .row.text-center
         each icon in icons
