--- a/pug/icons/coreui-icons-free.pug
+++ b/pug/icons/coreui-icons-free.pug
@@ -10,8 +10,8 @@ block view
   .card.mb-4
     .card-header
       |  CoreUI Icons - Free
-      .card-header-actions
-        a.card-header-action(href='https://coreui.io/icons/', target='_blank') Download free icons
+      .float-end
+        a(href='https://coreui.io/icons/', target='_blank') Download free icons
     .card-body
       .row.text-center
         each icon in icons
