--- a/pug/notifications/alerts.pug
+++ b/pug/notifications/alerts.pug
@@ -6,9 +6,9 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Alerts
-          .card-header-actions
-            a.card-header-action(href='http://coreui.io/docs/components/bootstrap-alerts/', target='_blank')
-              small.text-muted docs
+          .float-end
+            a(href='http://coreui.io/docs/components/alerts/', target='_blank')
+              | docs
         .card-body
           .alert.alert-primary(role='alert')
             | This is a primary alert—check it out!
@@ -74,7 +74,7 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Alerts
-          small additional content
+          span.small.ms-1 additional content
         .card-body
           .alert.alert-success(role='alert')
             h4.alert-heading Well done!
@@ -88,7 +88,7 @@ block view
       .card.mb-4
         .card-header
           |  Bootstrap Alerts
-          small dismissing
+          span.small.ms-1 dismissing
         .card-body
           .alert.alert-warning.alert-dismissible.fade.show(role='alert')
             .fw-semibold Holy guacamole!
