refactor: update icons to v4

--- a/pug/icons/coreui-icons-brand.pug
+++ b/pug/icons/coreui-icons-brand.pug
@@ -16,7 +16,7 @@ block view
       .row.text-center
         each icon in icons
           .col-6.col-sm-4.col-md-2
-            i(class='c-icon c-icon-2xl mt-5 mb-2 cib-' + icon)
+            i(class='icon icon-2xl mt-5 mb-2 cib-' + icon)
             div cib-#{icon}
       // /.row
 
