--- a/pug/icons/coreui-icons-flag.pug
+++ b/pug/icons/coreui-icons-flag.pug
@@ -15,5 +15,5 @@ block view
       .row.text-center
         each icon in icons
           .col-6.col-sm-4.col-md-2
-            i(class='c-icon c-icon-2xl mt-5 mb-2 cif-' + icon.toLowerCase())
+            i(class='icon icon-2xl mt-5 mb-2 cif-' + icon.toLowerCase())
             div cif-#{icon.toLowerCase()}
