fix: add correct class to pill badges

--- a/pug/notifications/badge.pug
+++ b/pug/notifications/badge.pug
@@ -38,38 +38,25 @@ block view
           |  Bootstrap Badges
           span.small.ms-1 contextual variations
         .card-body
-          span.badge.bg-primary Primary
-          span.badge.bg-secondary Secondary
-          span.badge.bg-success Success
-          span.badge.bg-danger Danger
-          span.badge.bg-warning Warning
-          span.badge.bg-info Info
-          span.badge.bg-light Light
-          span.badge.bg-dark Dark
+          span.badge.me-1.bg-primary Primary
+          span.badge.me-1.bg-secondary Secondary
+          span.badge.me-1.bg-success Success
+          span.badge.me-1.bg-danger Danger
+          span.badge.me-1.bg-warning Warning
+          span.badge.me-1.bg-info Info
+          span.badge.me-1.bg-light Light
+          span.badge.me-1.bg-dark Dark
       .card.mb-4
         .card-header
           |  Bootstrap Badges
           span.small.ms-1 pill badges
         .card-body
-          span.badge.bg-pill.bg-primary Primary
-          span.badge.bg-pill.bg-secondary Secondary
-          span.badge.bg-pill.bg-success Success
-          span.badge.bg-pill.bg-danger Danger
-          span.badge.bg-pill.bg-warning Warning
-          span.badge.bg-pill.bg-info Info
-          span.badge.bg-pill.bg-light Light
-          span.badge.bg-pill.bg-dark Dark
-      .card.mb-4
-        .card-header
-          |  Bootstrap Badges
-          span.small.ms-1 links
-        .card-body
-          a.badge.bg-primary(href='#') Primary
-          a.badge.bg-secondary(href='#') Secondary
-          a.badge.bg-success(href='#') Success
-          a.badge.bg-danger(href='#') Danger
-          a.badge.bg-warning(href='#') Warning
-          a.badge.bg-info(href='#') Info
-          a.badge.bg-light(href='#') Light
-          a.badge.bg-dark(href='#') Dark
+          span.badge.me-1.rounded-pill.bg-primary Primary
+          span.badge.me-1.rounded-pill.bg-secondary Secondary
+          span.badge.me-1.rounded-pill.bg-success Success
+          span.badge.me-1.rounded-pill.bg-danger Danger
+          span.badge.me-1.rounded-pill.bg-warning Warning
+          span.badge.me-1.rounded-pill.bg-info Info
+          span.badge.me-1.rounded-pill.bg-light Light
+          span.badge.me-1.rounded-pill.bg-dark Dark
   // /.row
