--- a/pug/404.pug
+++ b/pug/404.pug
@@ -8,11 +8,9 @@ block view
           h1.float-start.display-3.me-4 404
           h4.pt-3 Oops! You're lost.
           p.text-muted The page you are looking for was not found.
-        .input-prepend.input-group
-          .input-group-prepend
-            span.input-group-text
-              svg.icon
-                use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-magnifying-glass")
+        .input-group
+          span.input-group-text
+            svg.icon
+              use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-magnifying-glass")
           input#prependedInput.form-control(size='16', type='text', placeholder='What are you looking for?')
-          span.input-group-append
-            button.btn.btn-info(type='button') Search
+          button.btn.btn-info(type='button') Search
