--- a/pug/_partials/header.pug
+++ b/pug/_partials/header.pug
@@ -13,18 +13,18 @@ header.header.header-sticky.mb-4
         a.nav-link(href="#") Users
       li.nav-item
         a.nav-link(href="#") Settings
-    ul.header-nav.ms-auto.me-4
+    ul.header-nav.ms-auto
       li.nav-item.d-md-down-none
         a.nav-link(href="#")
-          svg.icon
+          svg.icon.icon-lg
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
       li.nav-item.d-md-down-none
         a.nav-link(href="#")
-          svg.icon
+          svg.icon.icon-lg
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-list-rich")
       li.nav-item.d-md-down-none
         a.nav-link(href="#")
-          svg.icon
+          svg.icon.icon-lg
             use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
       li.nav-item.dropdown.d-flex.align-items-center
         a.nav-link.py-0(data-coreui-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false")
@@ -37,22 +37,22 @@ header.header.header-sticky.mb-4
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             |  Updates
-            span.badge.bg-info.ms-auto 42
+            span.badge.bg-info.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
             |  Messages
-            span.badge.bg-success.ms-auto 42
+            span.badge.bg-success.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-task")
             |  Tasks
-            span.badge.bg-danger.ms-auto 42
+            span.badge.bg-danger.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-comment-square")
             |  Comments
-            span.badge.bg-warning.ms-auto 42
+            span.badge.bg-warning.ms-2 42
           .dropdown-header.bg-light.py-2
             .fw-semibold Settings
           a.dropdown-item(href="#")
@@ -67,12 +67,12 @@ header.header.header-sticky.mb-4
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-credit-card")
             |  Payments
-            span.badge.bg-secondary.ms-auto 42
+            span.badge.bg-secondary.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-file")
             |  Projects
-            span.badge.bg-primary.ms-auto 42
+            span.badge.bg-primary.ms-2 42
           .dropdown-divider
           a.dropdown-item(href="#")
             svg.icon.me-2
