refactor: update badges size

--- a/src/pug/_partials/header.pug
+++ b/src/pug/_partials/header.pug
@@ -37,22 +37,22 @@ header.header.header-sticky.mb-4
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell")
             |  Updates
-            span.badge.bg-info.ms-2 42
+            span.badge.badge-sm.bg-info.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open")
             |  Messages
-            span.badge.bg-success.ms-2 42
+            span.badge.badge-sm.bg-success.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-task")
             |  Tasks
-            span.badge.bg-danger.ms-2 42
+            span.badge.badge-sm.bg-danger.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-comment-square")
             |  Comments
-            span.badge.bg-warning.ms-2 42
+            span.badge.badge-sm.bg-warning.ms-2 42
           .dropdown-header.bg-light.py-2
             .fw-semibold Settings
           a.dropdown-item(href="#")
@@ -67,12 +67,12 @@ header.header.header-sticky.mb-4
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-credit-card")
             |  Payments
-            span.badge.bg-secondary.ms-2 42
+            span.badge.badge-sm.bg-secondary.ms-2 42
           a.dropdown-item(href="#")
             svg.icon.me-2
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-file")
             |  Projects
-            span.badge.bg-primary.ms-2 42
+            span.badge.badge-sm.bg-primary.ms-2 42
           .dropdown-divider
           a.dropdown-item(href="#")
             svg.icon.me-2
