--- a/src/pug/_partials/sidebar.pug
+++ b/src/pug/_partials/sidebar.pug
@@ -10,7 +10,7 @@
         svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speedometer")
         |  Dashboard
-        span.badge.bg-info.ms-auto NEW
+        span.badge.badge-sm.bg-info.ms-auto NEW
     li.nav-title
       | Theme
     li.nav-item
@@ -123,7 +123,7 @@
         li.nav-item
           a.nav-link(href='icons/coreui-icons-free.html')
             |  CoreUI Icons
-            span.badge.bg-success.ms-auto Free
+            span.badge.badge-sm.bg-success.ms-auto Free
         li.nav-item
           a.nav-link(href='icons/coreui-icons-brand.html')
             |  CoreUI Icons - Brand
@@ -153,7 +153,7 @@
         svg.nav-icon
           use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator")
         |  Widgets
-        span.badge.bg-info.ms-auto NEW
+        span.badge.badge-sm.bg-info.ms-auto NEW
     li.nav-divider
     li.nav-title
       | Extras
