refactor: update layout

--- a/src/pug/_layout/default.pug
+++ b/src/pug/_layout/default.pug
@@ -9,7 +9,7 @@ html(lang='en')
     block styles
   body.bg-light
     include ../_partials/sidebar.pug
-    .wrapper.d-flex.flex-column.min-vh-100(data-coreui-reliant="sidebar")
+    .wrapper.d-flex.flex-column.min-vh-100
       include ../_partials/header.pug
       .body.flex-grow-1.px-3
         .container-lg
