--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,6 +4,7 @@
 // Import styles
 @import "@coreui/coreui/scss/coreui";
 
-// If you want to add something do it here
-@import "custom";
+@import "layout";
 
+// If you want to add custom CSS you can put it here.
+@import "custom";
