refactor: update text emphasis classes

--- a/src/pug/views/widgets.pug
+++ b/src/pug/views/widgets.pug
@@ -87,7 +87,7 @@ block view
           div Widget title
           .progress.progress-xs.my-2
             .progress-bar.bg-success(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-dark Widget helper text
+          small.text-medium-emphasis Widget helper text
     // /.col
     .col-sm-6.col-lg-3
       .card.mb-4
@@ -96,7 +96,7 @@ block view
           div Widget title
           .progress.progress-xs.my-2
             .progress-bar.bg-info(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-dark Widget helper text
+          small.text-medium-emphasis Widget helper text
     // /.col
     .col-sm-6.col-lg-3
       .card.mb-4
@@ -105,7 +105,7 @@ block view
           div Widget title
           .progress.progress-xs.my-2
             .progress-bar.bg-warning(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-dark Widget helper text
+          small.text-medium-emphasis Widget helper text
     // /.col
     .col-sm-6.col-lg-3
       .card.mb-4
@@ -114,7 +114,7 @@ block view
           div Widget title
           .progress.progress-xs.my-2
             .progress-bar.bg-danger(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-dark Widget helper text
+          small.text-medium-emphasis Widget helper text
     // /.col
   // /.row
   .row
@@ -125,7 +125,7 @@ block view
           div Widget title
           .progress.progress-white.progress-xs.my-2
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-light Widget helper text
+          small.text-medium-emphasis-inverse Widget helper text
     // /.col
     .col-sm-6.col-lg-3
       .card.mb-4.text-white.bg-warning
@@ -134,7 +134,7 @@ block view
           div Widget title
           .progress.progress-white.progress-xs.my-2
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-light Widget helper text
+          small.text-medium-emphasis-inverse Widget helper text
     // /.col
     .col-sm-6.col-lg-3
       .card.mb-4.text-white.bg-danger
@@ -143,7 +143,7 @@ block view
           div Widget title
           .progress.progress-white.progress-xs.my-2
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-light Widget helper text
+          small.text-medium-emphasis-inverse Widget helper text
     // /.col
     .col-sm-6.col-lg-3
       .card.mb-4.text-white.bg-info
@@ -152,7 +152,7 @@ block view
           div Widget title
           .progress.progress-white.progress-xs.my-2
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
-          small.text-medium-emphasis-light Widget helper text
+          small.text-medium-emphasis-inverse Widget helper text
     // /.col
   // /.row
   .row
@@ -557,66 +557,66 @@ block view
     .col-sm-6.col-md-2
       .card.mb-4.text-white.bg-info
         .card-body
-          .text-medium-emphasis-light.text-end.mb-4
+          .text-medium-emphasis-inverse.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-people")
           .fs-4.fw-semibold 87.500
-          small.text-medium-emphasis-light.text-uppercase.fw-semibold Visitors
+          small.text-medium-emphasis-inverse.text-uppercase.fw-semibold Visitors
           .progress.progress-white.progress-xs.mt-3
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4.text-white.bg-success
         .card-body
-          .text-medium-emphasis-light.text-end.mb-4
+          .text-medium-emphasis-inverse.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user-follow")
           .fs-4.fw-semibold 385
-          small.text-medium-emphasis-light.text-uppercase.fw-semibold New Clients
+          small.text-medium-emphasis-inverse.text-uppercase.fw-semibold New Clients
           .progress.progress-white.progress-xs.mt-3
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4.text-white.bg-warning
         .card-body
-          .text-medium-emphasis-light.text-end.mb-4
+          .text-medium-emphasis-inverse.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket")
           .fs-4.fw-semibold 1238
-          small.text-medium-emphasis-light.text-uppercase.fw-semibold Products sold
+          small.text-medium-emphasis-inverse.text-uppercase.fw-semibold Products sold
           .progress.progress-white.progress-xs.mt-3
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4.text-white.bg-primary
         .card-body
-          .text-medium-emphasis-light.text-end.mb-4
+          .text-medium-emphasis-inverse.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie")
           .fs-4.fw-semibold 28%
-          small.text-medium-emphasis-light.text-uppercase.fw-semibold Returning Visitors
+          small.text-medium-emphasis-inverse.text-uppercase.fw-semibold Returning Visitors
           .progress.progress-white.progress-xs.mt-3
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4.text-white.bg-danger
         .card-body
-          .text-medium-emphasis-light.text-end.mb-4
+          .text-medium-emphasis-inverse.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speedometer")
           .fs-4.fw-semibold 5:34:11
-          small.text-medium-emphasis-light.text-uppercase.fw-semibold Avg. Time
+          small.text-medium-emphasis-inverse.text-uppercase.fw-semibold Avg. Time
           .progress.progress-white.progress-xs.mt-3
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
     .col-sm-6.col-md-2
       .card.mb-4.text-white.bg-info
         .card-body
-          .text-medium-emphasis-light.text-end.mb-4
+          .text-medium-emphasis-inverse.text-end.mb-4
             svg.icon.icon-2xl
               use(xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speech")
           .fs-4.fw-semibold 972
-          small.text-medium-emphasis-light.text-uppercase.fw-semibold Comments
+          small.text-medium-emphasis-inverse.text-uppercase.fw-semibold Comments
           .progress.progress-white.progress-xs.mt-3
             .progress-bar(role='progressbar', style='width: 25%', aria-valuenow='25', aria-valuemin='0', aria-valuemax='100')
     // /.col
