refactor: change sidebar responsive behavior

--- a/src/pug/_partials/sidebar.pug
+++ b/src/pug/_partials/sidebar.pug
@@ -1,4 +1,4 @@
-.sidebar.sidebar-dark.sidebar-fixed.sidebar-lg-show#sidebar
+.sidebar.sidebar-dark.sidebar-fixed.sidebar-self-hiding-md#sidebar
   .sidebar-brand.d-lg-down-none
     svg.sidebar-brand-full(width="118" height="46" alt="CoreUI Logo")
       use(xlink:href="assets/brand/coreui.svg#full")
